# vala-get-started

./: Application.vala  README.md  Window.vala  meson.build  test.vala
book_guides/Chapter2-Getting-Started/: helloGUIWorld.vala  helloObjectWorld.vala  helloWorld.vala
book_guides/Chapter3-Syntax-Semantics/: enumerations.vala  scopes.vala  strings.vala
book_guides/Chapter3-Syntax-Semantics/namespaces/: a.vala  b.vala  c.vala  global.vala
data/: gschema.xml  meson.build  myapp.appdata.xml  myapp.desktop
src/: Application.vala  Main.vala  MainWindow.vala  meson.build  test.vala
src/Services/: Notification.vala
src/Widgets/: HeaderBar.vala  Window.vala
vala_app/: README.md
vala_app/data/: test.xml
vala_app/src/: Application.vala  Main.vala
