install_data(
  'gschema.xml',
  install_dir : join_paths (get_option ('datadir'), 'glib-2.0', 'schemas'),
  rename: meson.project_name() + '.gschema.xml' 
)

# Install our .desktop file so the Applications Menu will see it
#install_data(
#    join_paths('data', 'hello-again.desktop'),
#    install_dir: join_paths(get_option('datadir'), 'applications'),
#    rename: meson.project_name() + '.desktop'
#)

# Install our .appdata.xml file so AppCenter will see it
#install_data(
#    join_paths('data', 'hello-again.appdata.xml'),
#    install_dir: join_paths(get_option('datadir'), 'metainfo'),
#    rename: meson.project_name() + '.appdata.xml'
#)